Fixing the double scrollbar bug

--- a/src/app/components/inputs/InputsArea.less
+++ b/src/app/components/inputs/InputsArea.less
@@ -1,3 +1,4 @@
-.inputs-area {
-  padding-top: 5px;
+.inputs-area .create-line-row:first-child {
+  // lines the create-line up with the create-line in the second column
+  margin-top: 5px;
 }
